--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
     "angular-animate": "^1.5.0",
     "angular-messages": "^1.5.0",
     "angular-bootstrap": "^1.1.2",
-    "ordercloud-ng-sdk": "^1.0.12",
+    "ordercloud-ng-sdk": "^1.0.24",
     "angular-auto-validate": "^1.19.3",
     "font-awesome": "^4.5.0",
     "angular-localforage": "^1.2.5",
@@ -46,8 +46,7 @@
     "angular-ui-calendar": "^1.0.2"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0",
-    "ordercloud-ng-sdk": "^1.0.22"
+    "angular-mocks": "^1.5.0"
   },
   "resolutions": {
     "angular-animate": "^1.5.0",
